test/files/neg/t5639b.check
A_2.scala:6: error: could not find implicit value for parameter e: Int
  implicitly[Int]
            ^
one error found
